--- a/dvc.yaml
+++ b/dvc.yaml
@@ -14,7 +14,7 @@ stages:
      - data/raw
      - src/data/data_prep.py
     outs:
-     -data/processed
+     - data/processed
 
   model_building:
     cmd: python src/model/model_building.py
@@ -29,7 +29,7 @@ stages:
   model_eval:
     cmd: python src/model/model_eval.py
     deps:
-     - model/model.pkl
-     - src/model_eval/model_eval.py
+     - models/model.pkl
+     - src/model/model_eval.py
     metrics:
      - reports/metrics.json
